testing display of weekly winning
