# server/api/Services/IBoardService.cs
@@ -8,4 +8,6 @@ public interface IBoardService
     Task<List<BoardDtoResponse>> GetByUserAsync(string userId);
     Task<List<BoardDtoResponse>> CreateBetsAsync(string userId, IEnumerable<CreateBoardRequest> dtos);
     Task<List<AdminBoardDtoResponse>> GetAllBoardsForAdminAsync();
+    
+    Task<List<WeeklyBoardSummaryDto>> GetWeeklyWinningSummaryAsync();
 }
